# chat-with-documents-local-llm

./: README.md  buildspec.yml  cli.py  deploy.sh  docker-cleanup.sh  docker-compose.yml  start-ollama.sh
app/auth/: jwt.py
app/core/: celery_app.py  dependencies.py  logging_config.py
app/db/: database.py  models.py
app/services/: rag_service.py  storage_service.py
chat-with-documents-local-llm/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
chat-with-documents-local-llm/app/: main.py  tasks.py
chat-with-documents-local-llm/app/api/v1/: auth.py  chat.py  documents.py  projects.py
chat-with-documents-local-llm/app/auth/: schemas.py
chat-with-documents-local-llm/app/core/: config.py
chat-with-documents-local-llm/app/db/: crud.py  schemas.py
chat-with-documents-local-llm/frontend/: Dockerfile
frontend/: app.py
